--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
 	},
 	"dependencies": {
 		"@polkadot-api/descriptors": "file:.papi/descriptors",
+		"@polkadot-api/tx-utils": "^0.1.2",
 		"polkadot-api": "^1.15.2"
 	}
 }
