--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
 		"@noble/hashes": "^1.8.0",
 		"@polkadot-api/descriptors": "file:.papi/descriptors",
 		"@polkadot-api/tx-utils": "^0.1.2",
+		"ethereum-blockies-base64": "^1.0.2",
 		"polkadot-api": "^1.15.2"
 	}
 }
