--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
 		"@sveltejs/vite-plugin-svelte": "^6.1.0",
 		"@tailwindcss/forms": "^0.5.10",
 		"@tailwindcss/vite": "^4.1.11",
+		"@types/lokijs": "^1.5.14",
 		"eslint": "^9.32.0",
 		"eslint-config-prettier": "^10.1.8",
 		"eslint-plugin-svelte": "^3.11.0",
@@ -43,6 +44,7 @@
 		"@polkadot-api/descriptors": "file:.papi/descriptors",
 		"@polkadot-api/tx-utils": "^0.1.2",
 		"ethereum-blockies-base64": "^1.0.2",
+		"lokijs": "^1.5.12",
 		"polkadot-api": "^1.15.2"
 	}
 }
