--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,30 +36,7 @@ jobs:
           path: ./build
 
       - name: CI Unit Tests
-        run: npm run test:ci
-
-  e2e:
-    runs-on: ubuntu-latest
-    services:
-      frequency-instant:
-        image: 'frequencychain/instant-seal-node:latest'
-        ports:
-          - '9944:9944' # ws and rpc port
-
-    steps:
-      - name: Checkout
-        uses: actions/checkout@v4
-
-      - name: Use Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: 22
-          cache: 'npm'
-
-      - name: Install Dependencies
-        run: npm ci
-      - name: 'E2E Tests'
-        run: npm run test:e2e
+        run: npm run test
 
   # Preview PRs when actions/deploy-pages preview option is in public
   # https://github.com/actions/deploy-pages/issues/180
