--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,8 +3,8 @@ name: Deploy to GitHub Pages
 
 on:
   push:
-    tags:
-      - 'v[0-9]+.[0-9]+.[0-9]+' # ex. v1.0.0
+    branches:
+      - main
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
