--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -1,5 +1,5 @@
 # yaml-language-server: $schema=https://json.schemastore.org/github-workflow.json
-name: Prettier checks
+name: Lint checks
 on:
   push:
     branches: ['main', 'feat/svelte-app']
@@ -7,8 +7,8 @@ on:
     branches: ['main', 'feat/svelte-app']
 
 jobs:
-  prettier:
-    name: Prettier
+  lint:
+    name: Lint
 
     runs-on: ubuntu-latest
 
@@ -25,5 +25,5 @@ jobs:
       - name: Install Dependencies
         run: npm ci
 
-      - name: Check formatting with Prettier
-        run: npm run prettier:check:ci
+      - name: Check formatting and eslint
+        run: npm run lint
