--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 		"@polkadot-api/tx-utils": "^0.1.2",
 		"ethereum-blockies-base64": "^1.0.2",
 		"lokijs": "^1.5.12",
-		"polkadot-api": "^1.15.2"
+		"polkadot-api": "^1.15.2",
+		"rxjs": "^7.8.2"
 	}
 }
