--- a/package.json
+++ b/package.json
@@ -19,10 +19,10 @@
 		"@eslint/compat": "^1.3.2",
 		"@eslint/js": "^9.33.0",
 		"@sveltejs/adapter-static": "^3.0.9",
-		"@sveltejs/kit": "^2.28.0",
-		"@sveltejs/vite-plugin-svelte": "^6.1.1",
+		"@sveltejs/kit": "^2.30.0",
+		"@sveltejs/vite-plugin-svelte": "^6.1.2",
 		"@tailwindcss/forms": "^0.5.10",
-		"@tailwindcss/vite": "^4.1.11",
+		"@tailwindcss/vite": "^4.1.12",
 		"@types/lokijs": "^1.5.14",
 		"eslint": "^9.33.0",
 		"eslint-config-prettier": "^10.1.8",
@@ -33,7 +33,7 @@
 		"prettier-plugin-tailwindcss": "^0.6.14",
 		"svelte": "^5.38.1",
 		"svelte-check": "^4.3.1",
-		"tailwindcss": "^4.1.11",
+		"tailwindcss": "^4.1.12",
 		"typescript": "^5.9.2",
 		"typescript-eslint": "^8.39.1",
 		"vite": "^7.1.2",
@@ -43,7 +43,7 @@
 		"@noble/hashes": "^1.8.0",
 		"@polkadot-api/descriptors": "file:.papi/descriptors",
 		"@polkadot-api/tx-utils": "^0.1.2",
-		"ethereum-blockies-base64": "^1.0.2",
+		"blo": "^2.0.0",
 		"lokijs": "^1.5.12",
 		"polkadot-api": "^1.16.1",
 		"rxjs": "^7.8.2"
